force-app/main/default/objects/Form_Field__c/Form_Field__c.object-meta.xml
<CustomObject>
    <label>Form Field</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Form Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>