force-app/main/default/objects/Form_Field__c/fields/APIRequired__c.field-meta.xml
<CustomField>
    <fullName>APIRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be checked if the underlying field is required by the SFDC API. This is needed for the correct rendering of the Web Form editor.</description>
    <label>APIRequired</label>
    <type>Checkbox</type>
</CustomField>