force-app/main/default/objects/Form_Field__c/fields/Currency_Value__c.field-meta.xml
<CustomField>
    <fullName>Currency_Value__c</fullName>
    <label>Currency Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>