force-app/main/default/objects/Form_Field__c/fields/Date_Value__c.field-meta.xml
<CustomField>
    <fullName>Date_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Value</label>
    <type>Date</type>
</CustomField>