force-app/main/default/objects/Form_Field__c/fields/DateTime_Value__c.field-meta.xml
<CustomField>
    <fullName>DateTime_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DateTime Value</label>
    <type>DateTime</type>
</CustomField>