force-app/main/default/objects/Form_Field__c/fields/Email_Value__c.field-meta.xml
<CustomField>
    <fullName>Email_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Value</label>
    <type>Email</type>
</CustomField>