force-app/main/default/objects/Form_Field__c/fields/Hidden__c.field-meta.xml
<CustomField>
    <fullName>Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this field is checked, it will be hidden in the Web Form</description>
    <inlineHelpText>Check this field to hide it on the form. Hidden fields require a default value.</inlineHelpText>
    <label>Hidden</label>
    <type>Checkbox</type>
</CustomField>