force-app/main/default/objects/Form_Field__c/fields/Percent_Value__c.field-meta.xml
<CustomField>
    <fullName>Percent_Value__c</fullName>
    <label>Percent Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>