force-app/main/default/objects/Form_Field__c/fields/Phone_Value__c.field-meta.xml
<CustomField>
    <fullName>Phone_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone Value</label>
    <type>Phone</type>
</CustomField>