force-app/main/default/objects/Form_Field__c/fields/Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Picklist_Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>