force-app/main/default/objects/Form_Field__c/fields/PicklistEntries__c.field-meta.xml
<CustomField>
    <fullName>PicklistEntries__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PicklistEntries</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>