force-app/main/default/objects/Form_Field__c/fields/Text_Area_Long_Value__c.field-meta.xml
<CustomField>
    <fullName>Text_Area_Long_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Text Area Long Value</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>