force-app/main/default/objects/Form_Field__c/fields/Text_Area_Value__c.field-meta.xml
<CustomField>
    <fullName>Text_Area_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Text Area Value</label>
    <type>TextArea</type>
</CustomField>