force-app/main/default/objects/Form_Field__c/fields/Text_Value__c.field-meta.xml
<CustomField>
    <fullName>Text_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Text Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>