force-app/main/default/objects/Form_Field__c/fields/URL_Value__c.field-meta.xml
<CustomField>
    <fullName>URL_Value__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>URL Value</label>
    <type>Url</type>
</CustomField>