force-app/main/default/objects/Form_Field__c/fields/Web_Form__c.field-meta.xml
<CustomField>
    <fullName>Web_Form__c</fullName>
    <label>Web Form</label>
    <referenceTo>Web_Form__c</referenceTo>
    <relationshipLabel>Form Fields</relationshipLabel>
    <relationshipName>R00N70000002DiOrEAK</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>