force-app/main/default/objects/Form_Field__c/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <description>Will hold the width in pixels for this form field. Will default to 250 if nothing is filled in.</description>
    <label>Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>